# handlr

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs
src/apps/: mod.rs  system.rs  user.rs
src/common/: db.rs  desktop_entry.rs  handler.rs  mime_types.rs  mod.rs  path.rs
