[package]
name = "handlr"
version = "0.6.7"
authors = ["Gregory <gregory.mkv@gmail.com>", "Lucas <lmb@lmburns.com>"]
edition = "2018"
license = "MIT"
description = "Manage mimeapps.list and default applications with ease"
categories = ["xdg", "mime", "linux"]
resolver = "2"

[features]
default = ["skim-select"]

skim-select = ["skim"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = "3.0.0-beta.5"
url = "2.2.1"
itertools = "0.10.0"
json = "0.12.4"
shlex = "1.0.0"
thiserror = "1.0.24"
ascii_table = "3.0.2"
xdg = "2.2.0"
mime = "0.3.16"
mime-db = "1.3.0"
atty = "0.2.14"
confy = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
xdg-mime = "0.3.3"
freedesktop_entry_parser = "1.1.1"
once_cell = "1.7.2"
aho-corasick = "0.7.15"
which = "4.2.2"
colored = "2.0.0"

[target.'cfg(unix)'.dependencies]
skim = { version = "0.9.4", optional = true }

[profile.release]
opt-level=3
lto=true
